--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
 
-      - run: cd scripts
-      - run: bun run index.ts
+      - run: bun run scripts/index.ts
 
       - run: |-
           git add .
