--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,6 +16,8 @@ jobs:
           echo "version=$version" >> $GITHUB_ENV
         name: "run auto updater"
       - run: |-
+          git fetch origin
+          git pull origin main
           git add .
           git diff
           git config --global user.email "github-action-bot@example.com"
